third_party/rust_crates/forks/pin-init/tests/ui/compile-fail/init/missing_field.stderr
error[E0063]: missing field `b` in initializer of `Foo`
  --> tests/ui/compile-fail/init/missing_field.rs:11:26
   |
11 |     let _foo = pin_init!(Foo { a: 0 });
   |                          ^^^ missing `b`

error[E0063]: missing field `b` in initializer of `Foo`
  --> tests/ui/compile-fail/init/missing_field.rs:12:26
   |
12 |     let _foo = pin_init!(Foo { a: 0 }? ::std::convert::Infallible);
   |                          ^^^ missing `b`

error[E0063]: missing field `b` in initializer of `Foo`
  --> tests/ui/compile-fail/init/missing_field.rs:13:22
   |
13 |     let _foo = init!(Foo { a: 0 });
   |                      ^^^ missing `b`

error[E0063]: missing field `b` in initializer of `Foo`
  --> tests/ui/compile-fail/init/missing_field.rs:14:22
   |
14 |     let _foo = init!(Foo { a: 0 }? ::std::convert::Infallible);
   |                      ^^^ missing `b`
